dark mode good, border spacing fixed

--- a/popup.css
+++ b/popup.css
@@ -12,7 +12,7 @@
   text-align: left;
   border-radius:20px;
   box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
-  transition: 0.5s;
+  transition: left 550ms ease;
 }
 
 .popupheader {
